"Refesh the backend config with .env."

--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,6 @@ backend/app/data/__pycache__/
 backend/app/schemas/__pycache__/
 backend/app/services/__pycache__/
 
+
+# ======================== Global Configuration ============================
+.env
