--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,24 +2,27 @@
 
 server {
     # 监听 80 端口（容器内部端口，外部通过docker-compose映射为8080）
+    # Listen on port 80 (internal port of the container, mapped to 8080 externally via docker-compose)
     listen 80;
     server_name localhost;
 
     # 禁用绝对路径重定向，避免重定向到错误的端口
+    # Disable absolute path redirection to avoid redirection to the wrong port
     absolute_redirect off;
-    # 禁止在重定向中添加端口号（避免端口混淆）
+    # 禁止在重定向中添加端口号--Disable adding port numbers in redirects
     port_in_redirect off;
 
-    # 网站的根目录，指向我们挂载进来的 Astro 构建产物
+    # 网站的根目录，指向挂载的 Astro 构建产物
+    # The root directory of the website, pointing to the mounted Astro build product
     root /usr/share/nginx/html;
     index index.html;
 
-    # 尝试查找与 URL 匹配的文件。这是让 Astro 的路由正常工作的关键
+    # 尝试查找与 URL 匹配的文件--Try to find a file matching the URL
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # 核心：反向代理配置
+    # 反向代理配置--Reverse proxy configuration
     # 代理API相关的所有请求到后端
     location ~ ^/(api|docs|openapi\.json|token) {
         # 将请求转发给backend服务（Docker内部网络通过服务名解析）
