--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,6 +34,12 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
+        # 超时配置（用于处理 Astro 构建等耗时操作）
+        proxy_connect_timeout 600;
+        proxy_send_timeout 600;
+        proxy_read_timeout 600;
+        send_timeout 600;
+
         # 修正后端返回的重定向URL
         # 使用正则表达式替换，捕获路径部分并重新构造URL
         proxy_redirect ~^http://[^/]+(/.*)$ http://$host:8080$1;
