--- a/.env.example
+++ b/.env.example
@@ -24,17 +24,22 @@ SECRET_KEY=your_secret_key_here
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=your_strong_password_here
 
-# Astro 路径配置
-ASTRO_PROJECT_PATH=/code/lingLong
-ASTRO_CONTENT_PATH=/code/lingLong/src/contents/posts
-ASTRO_DIST_PATH=/code/lingLong/dist
+# ============================================
+# 部署脚本配置 (deploy.sh)
+# ============================================
 
-# CORS 配置
-# 留空使用 Nginx 反向代理模式
-# 开发环境：留空使用默认本地端口 (localhost:4321-5000)
-# 生产环境（Nginx反向代理）：留空
-# 生产环境（直接暴露）：填写域名，如 https://yourdomain.com
-# 示例：
-# ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
-# ALLOWED_ORIGINS=https://blog.example.com:443,https://admin.example.com:443
-ALLOWED_ORIGINS=
+# Git 分支配置
+CODE_BRANCH=dev              # 代码仓库分支
+CONTENT_BRANCH=master        # 内容仓库分支
+
+# 仓库路径配置 (树莓派上的绝对路径)
+# 示例：/home/alen/blog
+PROJECT_DIR=/path/to/blog
+CODE_DIR=${PROJECT_DIR}/code/lingLong
+CONTENT_DIR=${PROJECT_DIR}/contents
+
+# 包管理器配置
+PACKAGE_MANAGER=pnpm         # pnpm | npm | yarn
+
+# Docker 配置
+DOCKER_COMPOSE_CMD="docker compose"  # 或 "docker-compose"
