Add: some banner pictures

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ CONTENT_BRANCH=master        # 内容仓库分支
 # 示例：/home/alen/blog
 PROJECT_DIR=/path/to/blog
 CODE_DIR=${PROJECT_DIR}/code/lingLong
-CONTENT_DIR=${PROJECT_DIR}/contents
+CONTENT_DIR=${PROJECT_DIR}/post
 
 # 包管理器配置
 PACKAGE_MANAGER=pnpm         # pnpm | npm | yarn
